ferric/tests/ui/semantic_err_05.stderr
error: duplicate observe of variable `grass_wet`
  --> tests/ui/semantic_err_05.rs:28:13
   |
28 |     observe grass_wet;
   |             ^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `grass`
  --> tests/ui/semantic_err_05.rs:32:18
   |
32 |     let _model = grass::Model { grass_wet: true };
   |                  ^^^^^ use of undeclared crate or module `grass`
